--- a/Dockerfile-Debian-13
+++ b/Dockerfile-Debian-13
@@ -1,4 +1,4 @@
-FROM ubuntu:20.04
+FROM debian:13
 
 # Update system and add the packages required for Yocto builds.
 # Use DEBIAN_FRONTEND=noninteractive, to avoid image build hang waiting
@@ -7,14 +7,15 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt update
 RUN apt install -y gawk wget git-core diffstat unzip texinfo \
-    gcc-multilib build-essential chrpath socat cpio python python3 \
+    gcc-multilib build-essential chrpath socat file cpio python3 \
     python3-pip python3-pexpect xz-utils debianutils iputils-ping \
     libsdl1.2-dev xterm tar locales net-tools rsync sudo vim curl zstd \
-    liblz4-tool libssl-dev bc lzop
+    lz4 libssl-dev bc lzop libgnutls28-dev efitools git-lfs
 
 # Set up locales
-RUN locale-gen en_US.UTF-8 && \
-    update-locale LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8
+
+RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
+    locale-gen
 ENV LANG en_US.UTF-8
 ENV LC_ALL en_US.UTF-8
 
