iterating on builds triggering automagically

--- a/Dockerfile-Debian-13
+++ b/Dockerfile-Debian-13
@@ -27,20 +27,17 @@ RUN rm /bin/sh && ln -s bash /bin/sh
 ADD https://storage.googleapis.com/git-repo-downloads/repo /usr/local/bin/
 RUN chmod 755 /usr/local/bin/repo
 
-# Add your user to sudoers to be able to install other packages in the container.
-ARG USER
-RUN echo "${USER} ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/${USER} && \
-    chmod 0440 /etc/sudoers.d/${USER}
+# Create and use a user called "builduser" instead of the current user.
+RUN groupadd -g 1000 builduser && \
+    useradd -g 1000 -m -s /bin/bash -u 1000 builduser
 
-# Set the arguments for host_id and user_id to be able to save the build artifacts
-# outside the container, on host directories, as docker volumes.
-ARG host_uid \
-    host_gid
-RUN groupadd -g $host_gid nxp && \
-    useradd -g $host_gid -m -s /bin/bash -u $host_uid $USER
+# Add builduser to sudoers to be able to install other packages in the container.
+RUN echo "builduser ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/builduser && \
+    chmod 0440 /etc/sudoers.d/builduser
 
-# Yocto builds should run as a normal user.
-USER $USER
+USER builduser
+
+RUN git config --global user.name "builduser" && git config --global user.email "builduser@builduser"
 
 ARG DOCKER_WORKDIR
 WORKDIR ${DOCKER_WORKDIR}
